--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "ts:check": "tsc"
   },
   "dependencies": {
-    "@types/react": "~18.2.14",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@types/react": "~18.2.48",
+    "expo": "50.0.4",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "typescript": "^5.1.3",
-    "react-native-reanimated": "~3.3.0"
+    "react-native": "0.73.3",
+    "typescript": "^5.3.3",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
